--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <title>HexaWord - Hexagonal Word Puzzle</title>
     <style>
       * {
@@ -22,21 +23,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: linear-gradient(135deg, #e3f2fd 0%, #f3e5f5 100%);
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       }
       
       h1 {
-        color: white;
+        color: #2c3e50;
         text-align: center;
         font-size: clamp(1.5rem, 4vw, 2.5rem);
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         margin-bottom: 1rem;
         position: absolute;
         top: 1rem;
         left: 50%;
         transform: translateX(-50%);
         z-index: 10;
+        font-weight: 700;
       }
       
       #hex-grid-container {
