--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <title>HexaWord - Hexagonal Word Puzzle</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <style>
       * {
         margin: 0;
@@ -25,7 +28,7 @@
         align-items: center;
         justify-content: center;
         background: #141514;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family: 'Lilita One', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       }
       
       h1 {
@@ -39,7 +42,9 @@
         left: 50%;
         transform: translateX(-50%);
         z-index: 10;
-        font-weight: 700;
+        font-family: 'Lilita One', sans-serif;
+        font-weight: 400;
+        text-transform: uppercase;
       }
       
       #hex-grid-container {
